--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "[![Actions Status](https://github.com/temasemyonov678gh/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/temasemyonov678gh/frontend-project-lvl1/actions)",
   "main": "index.js",
   "bin": {
-    "code": "bin/brain-games.js",
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.49.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
