--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,8 +7,10 @@ parserOptions:
   sourceType: module
 rules:  
   no-console: 0
+  no-tabs: 0
   import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
     - error
     - ignorePackages
     - js: always
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  indent: ["error", 4, { "ignoredNodes": ["ConditionalExpression"] }]
